# SafeAnywhere

./: .env.example  .gitignore  README.md  pyproject.toml
code/: .env.example  .gitignore  README.md
code/configs/: safechain_pilot_1k.yaml  safechain_smoke_10.yaml
code/scripts/: 00_check_env.py  01_build_dataset.py
configs/: README.md  hex_phi_prefix_1200.yaml  hex_phi_prefix_500.yaml  safeanywhere_sft_v1.yaml  safechain_pilot_1k.yaml  safechain_pilot_2k.yaml  safechain_prefix_1600.yaml  safechain_smoke_10.yaml
configs/data_build/: safeanywhere_sft_v1.yaml  safechain_smoke_10.yaml
configs/eval/: safeanywhere_v1.yaml
configs/opsd/: safechain_qwen3_0_6b.yaml  safechain_qwen3_0_6b_special_tokens.yaml  teacher_prompts_v1.yaml
details/dataset/: IMPLEMENTATION_PIPELINE.md  README_v2.0.md  TEACHER_PROMPTS_v1.md
docs/: OPSD.md  REMOTE_CODEX_HANDOFF.md  SFT.md
docs/dataset/: IMPLEMENTATION_PIPELINE.md  (+2 more)
method/: SafeAnywhere_Proposal.md  SafeAnywhere_Proposal_Condensed.md
runs/: README.md
scripts/: 00_check_env.py  01_build_dataset.py  02_build_dangerous_prefix.py  02b_build_safechain_prefix.py  03_merge_sft_pilot.py  04_export_llamafactory_v1.py  05_validate_llamafactory_masks.py  06_build_eval_sets.py  07_generate_eval_responses.py  08_score_eval_results.py  09_compare_eval_reports.py  10_prepare_external_benchmarks.py  11_run_external_generation_eval.py  12_write_external_benchmark_commands.py  13_run_eval_comparison.sh  14_write_eval_readme.py  15_build_prefix2800_dataset.sh  README.md  build_sft_dataset.py  check_env.py  run_eval_comparison.sh
(+63 files in other folders)
